[gd_scene load_steps=18 format=3 uid="uid://cn73oaucik4hl"]

[ext_resource type="Texture2D" uid="uid://thplxecdym7e" path="res://assets/textures/monsters/monster_dissolve.png" id="1_8hwrl"]
[ext_resource type="Script" path="res://source/entities/monsters/orc.gd" id="1_56461"]
[ext_resource type="Texture2D" uid="uid://ddikyy2l3pdxj" path="res://assets/textures/monsters/small_orc_spritesheet.png" id="2_olrt2"]

[sub_resource type="AtlasTexture" id="AtlasTexture_vtldq"]
atlas = ExtResource("2_olrt2")
region = Rect2(16, 0, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_b50q1"]
atlas = ExtResource("1_8hwrl")
region = Rect2(0, 0, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_pc182"]
atlas = ExtResource("1_8hwrl")
region = Rect2(8, 0, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_8h0ms"]
atlas = ExtResource("1_8hwrl")
region = Rect2(16, 0, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_far3x"]
atlas = ExtResource("2_olrt2")
region = Rect2(16, 0, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_rbgkm"]
atlas = ExtResource("2_olrt2")
region = Rect2(0, 0, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_a737c"]
atlas = ExtResource("2_olrt2")
region = Rect2(8, 0, 8, 8)

[sub_resource type="SpriteFrames" id="1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vtldq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b50q1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pc182")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8h0ms")
}],
"loop": true,
"name": &"dissolve",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_far3x")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rbgkm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a737c")
}],
"loop": true,
"name": &"walk",
"speed": 4.0
}]

[sub_resource type="RectangleShape2D" id="2"]
size = Vector2(32, 63)

[sub_resource type="RectangleShape2D" id="3"]
size = Vector2(32, 8)

[sub_resource type="RectangleShape2D" id="4"]
size = Vector2(8, 40)

[sub_resource type="RectangleShape2D" id="8"]
size = Vector2(8, 40)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xgq08"]
bg_color = Color(0.169245, 0.169245, 0.169245, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_n8o3q"]
bg_color = Color(0.0823529, 0.498039, 0.121569, 1)

[node name="Orc0" type="CharacterBody2D"]
texture_filter = 1
scale = Vector2(0.125, 0.125)
collision_layer = 16
collision_mask = 131
script = ExtResource("1_56461")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-1.90735e-06, -1.90735e-06)
scale = Vector2(8, 8)
sprite_frames = SubResource("1")
animation = &"dissolve"
autoplay = "idle"

[node name="Hitbox" type="CollisionShape2D" parent="."]
position = Vector2(0, 0.5)
shape = SubResource("2")

[node name="FloorChecker" type="RayCast2D" parent="."]
target_position = Vector2(0, 33)
collision_mask = 2

[node name="TopChecker" type="Area2D" parent="."]
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="TopChecker"]
position = Vector2(0, -36)
shape = SubResource("3")

[node name="SidesChecker" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 33

[node name="CollisionShape2D" type="CollisionShape2D" parent="SidesChecker"]
position = Vector2(-20, 12)
shape = SubResource("4")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="SidesChecker"]
position = Vector2(20, 12)
shape = SubResource("8")

[node name="ProgressBar" type="ProgressBar" parent="."]
offset_left = -32.0
offset_top = -56.0
offset_right = 32.0
offset_bottom = -40.0
theme_override_styles/background = SubResource("StyleBoxFlat_xgq08")
theme_override_styles/fill = SubResource("StyleBoxFlat_n8o3q")
max_value = 2.0
value = 2.0
show_percentage = false

[connection signal="body_entered" from="TopChecker" to="." method="_on_TopChecker_body_entered"]
[connection signal="body_entered" from="SidesChecker" to="." method="_on_SidesChecker_body_entered"]
